Multi Step form UI and Logic

--- a/CeylonWellness.Web/Views/Welcome/Index.cshtml
+++ b/CeylonWellness.Web/Views/Welcome/Index.cshtml
@@ -2,16 +2,16 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
-            <p>#1 nutrition tracking app in the island</p>
-            <h1><strong>Reach your goals <br /> </strong> with Ceylon Wellness</h1>
+        <div class="col-md-8 my-auto">
+            <p class="text-muted">#1 nutrition tracking app in the island</p>
+            <h1 class="display-2"><strong>Reach your goals <br /> </strong>with <span style="color:#435EBF;">Ceylon Wellness</span> </h1>
 
             <p>Build healthy habits with the all-in-one food, exercise, and calorie tracker.</p>
 
-            <a>Start Today</a>
+            <a class="btn btn-primary btn-rounded btn-lg" data-mdb-ripple-init asp-controller="Form" asp-action="FormStepPlaceholder">Start Today &ensp;<span><i class="fa-solid fa-arrow-right"></i></span></a>
         </div>
         <div class="col-md-4">
-
+            <img src="/Assets/istockphoto-486662770-612x612-removebg-preview.png" style="width:350px;"/>
         </div>
     </div>
 </div>
