--- a/CeylonWellness.Web/Views/Shared/_Layout.cshtml
+++ b/CeylonWellness.Web/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                     <a class="navbar-brand mt-2 mt-lg-0" asp-area="" asp-controller="Home" asp-action="Index">
-                        <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
-                             height="15"
-                             alt="MDB Logo"
+                        <img src="/Assets/Logo.svg"
+                             height="40"
+                             alt="Ceylon Wellness Logo"
                              loading="lazy" />
                     </a>
                     @if (User.Identity.IsAuthenticated)
