--- a/CeylonWellness.Web/Views/Welcome/Index.cshtml
+++ b/CeylonWellness.Web/Views/Welcome/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿
 
 <div class="container">
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-md-8 my-auto">
             <p class="text-muted">#1 nutrition tracking app in the island</p>
-            <h1 class="display-2"><strong>Reach your goals <br /> </strong>with <span style="color:#435EBF;">Ceylon Wellness</span> </h1>
+            <h1 class="display-2"><strong style="font-weight:600;">Reach your goals <br /> </strong>with <span style="color:#435EBF;">Ceylon Wellness</span> </h1>
 
             <p>Build healthy habits with the all-in-one food, exercise, and calorie tracker.</p>
 
@@ -13,5 +13,9 @@
         <div class="col-md-4">
             <img src="/Assets/istockphoto-486662770-612x612-removebg-preview.png" style="width:350px;"/>
         </div>
+    </div>
+
+    <div class="row">
+
     </div>
 </div>
