--- a/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectAge.cshtml
@@ -6,62 +6,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multi-Step Form</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
 
-        .form-container {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            max-width: 400px;
-            width: 100%;
-            text-align: center; /* Center align text */
-            margin: auto; /* Center the form horizontally */
-        }
-
-            .form-container h3 {
-                margin-top: 0;
-                color: #007bff; /* Blue color */
-            }
-
-            .form-container input[type="number"] {
-                width: 100%;
-                padding: 10px;
-                margin: 10px 0;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-                box-sizing: border-box;
-            }
-
-            .form-container button {
-                background-color: #007bff;
-                color: #fff;
-                border: none;
-                border-radius: 5px;
-                padding: 10px 20px;
-                cursor: pointer;
-            }
-
-                .form-container button:hover {
-                    background-color: #0056b3;
-                }
-    </style>
+    <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true" />
 </head>
 <body>
-    <div class="form-container">
-        <h3>What is your Age</h3>
-        <input asp-for="Age" type="number" id="Age" />
-        <button type="button" onclick="loadNextStep('Steps/_SelectGender')">Continue</button>
+    <div class="container-sm container-width">
+        <div class="d-flex flex-column align-items-center">
+            <h3>What is your Age</h3>
+            <input asp-for="Age" type="number" id="Age" class="form-control mt-4 mxwidth" required/>
+            <button class=" cl btn btn-primary mt-5" type="button" onclick="loadNextStep('Steps/_SelectGender')">Continue</button>
+        </div>
     </div>
 </body>
 </html>
