--- a/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
@@ -10,7 +10,21 @@
                 <button type="button" class="btn btn-outline-primary btn-lg btn-block" onclick="setGender('female')">Female</button>
             </div>
             <input type="hidden" id="gender" name="gender" />
-            <button type="button" onclick="loadNextStep('Steps/_goal')" class="btn btn-primary btn-block mt-5">Continue</button>
+            <div class="row mb-5">
+                <div class="col-md-12">
+                    <!-- Empty column to create space -->
+                </div>
+            </div>
+            <div class="row mb-5">
+                <div class="col-md-6">
+                    <button type="button" onclick="loadNextStep('Steps/_SelectAge')" class="btn btn-secondary btn-lg btn-block">Previous</button>
+                </div>
+                <div class="col-md-6">
+                    <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-primary btn-lg btn-block">Continue</button>
+                </div>
+                
+                
+            </div>
         </div>
     </div>
 </div>
