--- a/CeylonWellness.Web/Views/Form/Steps/_goal.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_goal.cshtml
@@ -1,8 +1,36 @@
 ﻿@model CeylonWellness.Web.Models.MultiStepFormViewModel
 
-<label for="weightGoal" class="col-form-label">What do you want to achieve?</label>
-<select id="weightGoal" class="form-select">
-    <option value="gain" class="bg-primary text-white">Gain weight</option>
-    <option value="lose" class="bg-primary text-white">Lose weight</option>
-    <option value="maintain" class="bg-primary text-white">Maintain weight</option>
-</select>
+<div class="container-fluid d-flex justify-content-center align-items-center" style="height: 70vh;">
+    <div class="card p-4 shadow-lg rounded-5" style="width: 800px;">
+        <div class="card-body">
+
+            <h3 class="card-title">What do you want to achieve?</h3>
+            <div class="d-flex flex-column mb-3">
+                <button type="button" class="btn btn-outline-primary btn-lg btn-block mb-2" onclick="setGoal('gainweight')">Gain Weight</button>
+                <button type="button" class="btn btn-outline-primary btn-lg btn-block mb-2" onclick="setGoal('loseweight')">Lose Weight</button>
+                <button type="button" class="btn btn-outline-primary btn-lg btn-block mb-2" onclick="setGoal('maintainweight')">Maintain Weight</button>
+
+            </div>
+            <input type="hidden" id="goal" name="goal" />
+            <div class="row mb-3">
+                <div class="col-md-8">
+                    <!-- Empty column to create space -->
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <button type="button" onclick="loadNextStep('Steps/_SelectAge')" class="btn btn-secondary btn-lg btn-block">Previous</button>
+                </div>
+                <div class="col-md-6">
+                    <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg btn-block">Continue</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
