--- a/CeylonWellness.Web/Views/Form/Steps/_SelectDieteryPreference.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectDieteryPreference.cshtml
@@ -19,10 +19,10 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <button type="button" onclick="loadNextStep('Steps/_SelectAge')" class="btn btn-secondary btn-lg btn-block">Previous</button>
+                    <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-secondary btn-lg btn-block">Previous</button>
                 </div>
                 <div class="col-md-6">
-                    <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg btn-block">Continue</button>
+                    <button type="button" onclick="loadNextStep('')" class="btn btn-primary btn-lg btn-block">Continue</button>
                 </div>
             </div>
         </div>
