--- a/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
@@ -9,21 +9,23 @@
                 <button type="button" class="btn btn-outline-primary btn-lg btn-block mb-5" onclick="setGender('male')">Male</button>
                 <button type="button" class="btn btn-outline-primary btn-lg btn-block" onclick="setGender('female')">Female</button>
             </div>
+
             <input type="hidden" id="gender" name="gender" />
+
             <div class="row mb-5">
                 <div class="col-md-12">
                     <!-- Empty column to create space -->
                 </div>
             </div>
-            <div class="row mb-5">
-                <div class="col-md-6">
-                    <button type="button" onclick="loadNextStep('Steps/_SelectAge')" class="btn btn-secondary btn-lg btn-block">Previous</button>
+            <div class="col-md-15">
+                <div class="row">
+                    <div class="col-md-6">
+                        <button type="button" onclick="loadNextStep('Steps/_SelectAge')" class="btn btn-secondary btn-lg btn-block">Previous</button>
+                    </div>
+                    <div class="col-md-6">
+                        <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg btn-block">Continue</button>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <button type="button" onclick="loadNextStep('Steps/_SelectGender')" class="btn btn-primary btn-lg btn-block">Continue</button>
-                </div>
-                
-                
             </div>
         </div>
     </div>
