--- a/CeylonWellness.Web/Views/Form/Steps/_SelectDieteryPreference.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectDieteryPreference.cshtml
@@ -22,7 +22,7 @@
                     <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-secondary btn-lg btn-block">Previous</button>
                 </div>
                 <div class="col-md-6">
-                    <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg btn-block">Continue</button>
+                    <button type="button" onclick="loadNextStep('Steps/_SelectBarriers')" class="btn btn-primary btn-lg btn-block">Continue</button>
                 </div>
             </div>
         </div>
