UI diets, barriers

--- a/CeylonWellness.Web/Views/Form/Steps/_SelectBarriers.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectBarriers.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CeylonWellness.Web.Models.MultiStepFormViewModel
 
-<div class="container-fluid d-flex justify-content-center align-items-center" style="height: 70vh;">
+<div class="container-fluid d-flex justify-content-center align-items-center" style="height: 90vh;">
     <div class="card p-4 shadow-lg rounded-5" style="width: 800px;">
         <div class="card-body">
 
@@ -24,13 +24,13 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-6">
                         <button type="button" onclick="loadNextStep('Steps/_SelectDieteryPreference')" class="btn btn-secondary btn-lg btn-block">Previous</button>
                     </div>
                     <div class="col-md-6">
-                        <button type="button" onclick="loadNextStep('Steps/_SelectDieteryPreference')" class="btn btn-primary btn-lg btn-block">Continue</button>
+                        <button type="button" onclick="loadNextStep('Steps/_SelectDiets')" class="btn btn-primary btn-lg btn-block">Continue</button>
                     </div>
                 </div>
             </div>
