--- a/CeylonWellness.Web/Views/Form/Steps/_SelectDiets.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectDiets.cshtml
@@ -17,13 +17,13 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-6">
-                        <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-secondary btn-lg btn-block">Previous</button>
+                        <button type="button" onclick="loadNextStep('Steps/_SelectBarriers')" class="btn btn-secondary btn-lg btn-block">Previous</button>
                     </div>
                     <div class="col-md-6">
-                        <button type="button" onclick="loadNextStep('Steps/_SelectGoal')" class="btn btn-primary btn-lg btn-block">Continue</button>
+                        <button type="button" onclick="loadNextStep('Steps/_SelectActivityLevel')" class="btn btn-primary btn-lg btn-block">Continue</button>
                     </div>
                 </div>
             </div>
