--- a/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
+++ b/CeylonWellness.Web/Views/Form/Steps/_SelectGender.cshtml
@@ -1,8 +1,17 @@
 ﻿@model CeylonWellness.Web.Models.MultiStepFormViewModel
 
-<label for="gender">Gender:</label>
-<select asp-for="Gender" id="gender">
-    <option value="M">Male</option>
-    <option value="F">Female</option>
-    <option value="O">Other</option>
-</select>
+<link rel="stylesheet" href="~/css/custom.css" asp-append-version="true" />
+
+<div class="container">
+    <div class="col-12 col-md-12 text-center">
+        <h2 class="text-primary mt-3 mb-5">Select your Gender</h2>
+        <button class="btn btn-outline-primary gender-btn" type="button" id="male-btn" value="Male" data-mdb-ripple-init data-mdb-ripple-color="dark">
+            <span>Male</span>
+            <i class="fas fa-mars"></i>
+        </button>
+        <button class="btn btn-outline-primary gender-btn" type="button" id="female-btn" value="Female" data-mdb-ripple-init data-mdb-ripple-color="dark">
+            <span>Female</span>
+            <i class="fas fa-venus"></i>
+        </button>
+    </div>
+</div>
